# paper-mtdynamic

./: README.md  bibliography.bib  main.tex
plot/: Cargo.toml
plot/src/: adapt.rs  baseline.rs  prelude.rs
src/: Cargo.toml  Makefile  adapt.ipynb  build.rs  compare.ipynb  threads.ipynb
src/data/: adapt_nbody.csv  adapt_rust.csv  adapt_stencil.csv  compare_rust.csv  compare_stencil.csv  threads_matmul.csv
src/examples/: adapt.rs  compare.rs  matmul.rs  matmul.sac  matmul_mtd.sac  nbody.sac  nbody_mtd.sac  overhead.rs  stencil.sac  stencil_mtd.sac
src/examples/util/: util.rs
src/res/: adapt_rust.csv  baseline_matmul.csv  baseline_nbody.csv  baseline_rust.csv  baseline_stencil.csv
src/res/cn125/: lscpu.out  matmul.csv  nbody.csv  rust.csv  stencil.csv
src/res/laptop/: lscpu.out  nbody.csv
src/sac/: matmul.sac  matmul_mtd.sac  nbody.sac  nbody_mtd.sac  stencil.sac  stencil_mtd.sac
src/scripts/: adapt_matmul.sh  adapt_nbody.sh  adapt_rust.sh  adapt_stencil.sh  baseline_matmul.sh  baseline_nbody.sh  baseline_rust.sh  baseline_stencil.sh  compare_rust.sh  dynamic_matmul.sh  dynamic_nbody.sh  dynamic_rust.sh  dynamic_stencil.sh  matmul.sac  nbody.sac  overhead.sh  stencil.sac  threads_matmul.sh  threads_nbody.sh  threads_rust.sh  threads_stencil.sh
src/scripts/cn125/: README.md  adapt_matmul.sh  adapt_nbody.sh  adapt_rust.sh  adapt_stencil.sh  baseline_matmul.sh  baseline_nbody.sh  baseline_rust.sh  baseline_stencil.sh  dynamic_matmul.sh  (+4 more)
src/src/: baseline.rs  controller.rs  dynamic.rs  letterbox.rs  lib.rs  libc.rs  matrix.rs  overhead.rs  sample.rs
(+106 files in other folders)
