[package]
name = "mtdynamic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "baseline"
path = "src/baseline.rs"

[[bin]]
name = "overhead"
path = "src/overhead.rs"

[[bin]]
name = "dynamic"
path = "src/dynamic.rs"

[dependencies]
controller = { git = "https://github.com/JordyAaldering/ecodynamic.git" }
rand = "0.10.1"
rapl-energy = "0.2.2"
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.150"
