[package]
name = "mtdynamic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
chrono = "0.4.45"
core_affinity = "0.8.3"
rapl-energy = "0.1.18"
rayon = "1.12.0"
statistical = "1.0.0"

[dev-dependencies]
energy-bench = "0.1.20"
rand = "0.8.5"

[build-dependencies]
cbindgen = "0.29.4"
